<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linear_layout"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/artist_big_img_height"
            android:animateLayoutChanges="true">

            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:indeterminate="true"/>

            <ImageView
                android:id="@+id/artist_detail_big_img"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:visibility="invisible"
                android:contentDescription="@string/image_description"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id ="@+id/artist_detail_no_image"
                android:gravity="center"
                android:visibility="invisible"
                android:text="@string/artist_detail_fail_to_load_image"/>
        </FrameLayout>

        <TextView
            android:id="@+id/artist_detail_genre_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/artist_detail_padding"
            android:paddingRight="@dimen/artist_detail_padding"
            android:paddingTop="@dimen/artist_detail_padding"
            android:textAppearance="@style/MyTextAppearance.SmallLightText"/>

        <TextView
            android:id="@+id/artist_detail_albums_and_tracks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/artist_detail_padding"
            android:paddingRight="@dimen/artist_detail_padding"
            android:paddingTop="@dimen/artist_detail_padding"
            android:textAppearance="@style/MyTextAppearance.SmallLightText"/>

        <TextView
            android:id="@+id/artist_detail_biography_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/artist_detail_padding"
            android:paddingRight="@dimen/artist_detail_padding"
            android:paddingTop="@dimen/artist_detail_padding"
            android:text="@string/artist_detail_biography"
            android:textAppearance="@android:style/TextAppearance.Medium"/>

        <TextView
            android:id="@+id/artist_detail_biography_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lineSpacingMultiplier="1.5"
            android:paddingLeft="@dimen/artist_detail_padding"
            android:paddingRight="@dimen/artist_detail_padding"
            android:paddingTop="@dimen/artist_detail_padding_biography"
            android:textAppearance="@android:style/TextAppearance.Small"
            android:textColor="@android:color/black"/>
    </LinearLayout>
</ScrollView>